<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg9patch"
        android:orientation="vertical" >

        <include layout="@layout/action_bar_tv_student_name" />

        <TextView
            style="@style/headertextstyle"
            android:editable="true"
            android:text="@string/home_text_library" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_bg"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000" >
            </ListView>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/menu_bg"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/books_search"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/LatestUpdatesTextViews"
                        android:text="@string/isbn_no" />

                    <EditText
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/editbox_background"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/LatestUpdatesTextViews"
                        android:text="@string/book_id" />

                    <EditText
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/editbox_background"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>

                <Button
                    style="@style/buttonstyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dip"
                    android:text="@string/search" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/mms_ad" />

</LinearLayout>