<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg9patch"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="136dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/mihir_logo" >
            </ImageView>
        </LinearLayout>

        <TextView
            style="@style/headertextstyle"
            android:text="@string/login_header_text" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/bg_shadow"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/login_edittext_username"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dip"
                            android:hint="MMS ID"
                            android:text="MU12000001"
                            android:singleLine="true" >
                        </EditText>

                        <EditText
                            android:id="@+id/login_edittext_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="Password"
                            android:text="98765"
                            android:password="true"
                            android:singleLine="true" />

                        <CheckBox
                            android:id="@+id/login_checkbox_rememberme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/login_checkbox"
                            android:text="@string/remember_me"
                            android:textColor="#ffffff"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/login_btn_login"
                            style="@style/buttonstyle"
                            android:text="@string/login" >
                        </Button>

                       <Button
                            android:id="@+id/login_btn_forgotpwd"
                            style="@style/buttonstyle"
                            android:text="@string/forgotpwd" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dip"
                        android:text="Don&apos;t have an Account ?"
                        android:textColor="#ffffff"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/login_btn_register"
                        style="@style/buttonstyle"
                        android:text="@string/register" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/mms_ad" />

</LinearLayout>